Changed overflow to prevent scrollbar from disrupting formatting

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
+    overflow: hidden;
 }
 
 #app-main {
